# eos_gcc

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
eos_gcc/: hooks.py  modules.txt
eos_gcc/config/: desktop.py  docs.py
eos_gcc/eos/: accounting.py  accruals.py  api.py  engine.py  resolution.py  utils.py
eos_gcc/eos_gcc/doctype/eos_accrual_method/: eos_accrual_method.json  eos_accrual_method.py
eos_gcc/eos_gcc/doctype/eos_calculation/: eos_calculation.json  eos_calculation.py
eos_gcc/eos_gcc/doctype/eos_policy/: eos_policy.json  eos_policy.py
eos_gcc/eos_gcc/doctype/eos_policy_assignment/: eos_policy_assignment.json  eos_policy_assignment.py
eos_gcc/eos_gcc/doctype/eos_rule/: eos_rule.json  eos_rule.py
eos_gcc/eos_gcc/doctype/eos_settings/: eos_settings.json  eos_settings.py
eos_gcc/public/js/: employee.js
